cmake_minimum_required(VERSION 2.8)
project(yadb)

if(NOT WIN32)
  string(ASCII 27 Esc)
  set(NONE 		  "${Esc}[m")
  set(RED         "${Esc}[31m")
  set(GREEN       "${Esc}[32m")
  set(YELLOW      "${Esc}[33m")
  set(BLUE        "${Esc}[34m")
  set(CYAN        "${Esc}[36m")
  set(WHITE       "${Esc}[37m")
endif()

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
FILE(GLOB _ALL_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*)
FOREACH(_FILE ${_ALL_FILES})
	
  IF(IS_DIRECTORY ${_FILE})
    include_directories(${_FILE})
  ENDIF()
ENDFOREACH()

add_subdirectory(parser)
add_subdirectory(index)
add_subdirectory(storage)
add_subdirectory(serv)
add_subdirectory(thread)
add_subdirectory(proto)
add_subdirectory(journal)
